Add: Button events and attributes

--- a/release/index.html
+++ b/release/index.html
@@ -51,62 +51,62 @@
 
               <div id="buttons" class="columns is-mobile is-multiline is-gapless">
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="ac">ac</a>
+                  <a class="button is-white" type="function" value="ac">ac</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="ce">ce</a>
+                  <a class="button is-white" type="function" value="ce">ce</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="/">/</a>
+                  <a class="button is-white" type="operator" value="/">/</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="*">*</a>
+                  <a class="button is-white" type="operator" value="*">*</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="7">7</a>
+                  <a class="button is-white" type="number" value="7">7</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="8">8</a>
+                  <a class="button is-white" type="number" value="8">8</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="9">9</a>
+                  <a class="button is-white" type="number" value="9">9</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="-">-</a>
+                  <a class="button is-white" type="operator" value="-">-</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="4">4</a>
+                  <a class="button is-white" type="number" value="4">4</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="5">5</a>
+                  <a class="button is-white" type="number" value="5">5</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="6">6</a>
+                  <a class="button is-white" type="number" value="6">6</a>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="+">+</a>
+                  <a class="button is-white" type="operator" value="+">+</a>
                 </div>
                 <div class="column is-three-quarters">
                   <div id="columns" class="columns is-mobile is-multiline is-gapless">
                     <div class="column is-one-third">
-                      <a class="button is-white" value="1">1</a>
+                      <a class="button is-white" type="number" value="1">1</a>
                     </div>
                     <div class="column is-one-third">
-                      <a class="button is-white" value="2">2</a>
+                      <a class="button is-white" type="number" value="2">2</a>
                     </div>
                     <div class="column is-one-third">
-                      <a class="button is-white" value="3">3</a>
+                      <a class="button is-white" type="number" value="3">3</a>
                     </div>
                     <div class="column is-two-thirds">
-                      <a class="button is-white" value="0">0</a>
+                      <a class="button is-white" type="number" value="0">0</a>
                     </div>
                     <div class="column is-one-third">
-                      <a class="button is-white" value=".">.</a>
+                      <a class="button is-white" type="operator" value=".">.</a>
                     </div>
                   </div>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" value="=">=</a>
+                  <a class="button is-white" type="operator" value="=">=</a>
                 </div>
               </div>
 
