Add: Basic decimal checks, etc

--- a/release/index.html
+++ b/release/index.html
@@ -40,15 +40,10 @@
               </a>
             </header>
             <div id="display" class="card-content is-paddingless">
-              <div id="primary" class="display">
-                1234
-              </div>
-              <div id="secondary" class="display">
-                1234
-              </div>
+              <div id="primary" class="display active">0</div>
+              <div id="secondary" class="display"></div>
             </div>
             <footer class="card-footer">
-
               <div id="buttons" class="columns is-mobile is-multiline is-gapless">
                 <div class="column is-one-quarter">
                   <a class="button is-white" type="function" value="ac">ac</a>
@@ -101,17 +96,20 @@
                       <a class="button is-white" type="number" value="0">0</a>
                     </div>
                     <div class="column is-one-third">
-                      <a class="button is-white" type="operator" value=".">.</a>
+                      <a class="button is-white" type="number" value=".">.</a>
                     </div>
                   </div>
                 </div>
                 <div class="column is-one-quarter">
-                  <a class="button is-white" type="operator" value="=">=</a>
+                  <a class="button is-white" type="function" value="=">=</a>
                 </div>
               </div>
-
             </footer>
+            <div id="status" class="notification">
+              OK!
+            </div>
           </div>
+
 
         </div>
       </div>
