Add: Working calculation with watching for edge cases!

--- a/release/index.html
+++ b/release/index.html
@@ -40,8 +40,8 @@
               </a>
             </header>
             <div id="display" class="card-content is-paddingless">
-              <div id="primary" class="display active">0</div>
-              <div id="secondary" class="display"></div>
+              <div id="buffer" class="display active">0</div>
+              <div id="history" class="display">0</div>
             </div>
             <footer class="card-footer">
               <div id="buttons" class="columns is-mobile is-multiline is-gapless">
@@ -105,9 +105,6 @@
                 </div>
               </div>
             </footer>
-            <div id="status" class="notification">
-              OK!
-            </div>
           </div>
 
 
