Add: Github links

--- a/release/index.html
+++ b/release/index.html
@@ -107,6 +107,12 @@
             </footer>
           </div>
 
+          <div class="card">
+            <footer class="card-footer">
+              <a class="card-footer-item" href="https://htko.ca/project/code/fcc/calculator-widget/README/">Portfolio</a>
+              <a class="card-footer-item" href="https://github.com/htko89/fcc-calculator-widget">GitHub</a>
+            </footer>
+          </div>
 
         </div>
       </div>
