--- a/release/index.html
+++ b/release/index.html
@@ -10,7 +10,7 @@
   <!-- favicon -->
     <!-- <link rel="icon" href=".png"> -->
   <!-- external -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald|Roboto:100,300,400">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300">
   <!-- libraries -->
     <link rel="stylesheet" type="text/css" href="static/css/bulma-0.3.1.css">
     <script type="text/javascript" src="static/js/jquery-3.1.1.min.js"></script>
