Move: Id attributes in the wrong tags

--- a/release/index.html
+++ b/release/index.html
@@ -43,8 +43,8 @@
               <div id="buffer" class="display active">0</div>
               <div id="history" class="display">0</div>
             </div>
-            <footer class="card-footer">
-              <div id="buttons" class="columns is-mobile is-multiline is-gapless">
+            <footer id="buttons" class="card-footer">
+              <div class="columns is-mobile is-multiline is-gapless">
                 <div class="column is-one-quarter">
                   <a class="button is-white" type="function" value="ac">ac</a>
                 </div>
@@ -82,7 +82,7 @@
                   <a class="button is-white" type="operator" value="+">+</a>
                 </div>
                 <div class="column is-three-quarters">
-                  <div id="columns" class="columns is-mobile is-multiline is-gapless">
+                  <div class="columns is-mobile is-multiline is-gapless">
                     <div class="column is-one-third">
                       <a class="button is-white" type="number" value="1">1</a>
                     </div>
