--- a/release/index.html
+++ b/release/index.html
@@ -31,7 +31,7 @@
           <div class="card">
             <header id="title" class="card-header">
               <p class="card-header-title">
-                Calculator
+                Calculator Widget
               </p>
               <a class="card-header-icon">
                 <span class="icon">
